# sites-portfolio

./: .claudeignore  .gitignore  AI_AGENTS.md  Makefile  README.md  canonical_sections.toml  domains.csv  lamill.toml  plan.md  pyproject.toml
data/: portfolio.json  strategies.json
docs/: CLAUDE.md  Prompts.md  architecture.md  astro-learnings.md  bugs.md  coding-agents-survey.md  for-future-projects.md  for-seo-check-improvements.md  handoff.md  indexing-module-plan.md  prd.md  shipping-history.md
prompts/: README.md  adversarial_audit_v1.md  niche_evaluation_v1.md
tests/: test_action_plan.py  test_age_tracking.py  test_apikeys.py  test_astro_head_resolution.py  test_availability.py  test_bootstrap.py  test_bootstrap_prompts_ux.py  test_bootstrap_rollback.py  test_bootstrap_smart_paste.py  test_bootstrap_summary_topic.py  test_canonical_sections.py  test_check_057_purge_verify.py  test_check_081_placeholder_metadata.py  test_check_150_apex_canonical_redirect.py  test_check_152_content_derivable.py  test_check_155_index_regression.py  test_check_158_canonical_host_is_apex.py  test_check_159_sitemap_host_is_apex.py  test_check_160_gsc_sitemap_host_is_apex.py  test_check_161_canonical_resolves_200.py  test_cloudflare.py  test_cloudflare_v15i.py  test_cloudflare_v25b.py  test_cloudflare_v25e.py  test_config_dark_sites.py  test_content_backfill_v29e.py  test_content_derive_v29c.py  test_content_seed_v29b.py  test_content_wire_v29d.py  test_dashboard.py  test_delegate_baseline.py  test_delegate_build_observability.py  test_delegate_v33b.py  test_delegate_v33f.py  (+131 more)
(+331 files in other folders)
