[project]
name = "portfolio"
version = "0.1.0"
description = "Domain portfolio management CLI."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tldextract>=5",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "beautifulsoup4>=4.12",
    "tomli-w>=1.0",
    "pytrends>=4.9",
]

[project.scripts]
lamill = "portfolio.cli:app"
# `portfolio` kept as a backward-compat alias so existing muscle memory
# and scripts keep working through the transition. Remove later.
portfolio = "portfolio.cli:app"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]
